# PUTSLAM

./: .gitignore  CMakeLists.txt  README.md  build.sh  demoG2o.cpp  demoGrabber.cpp  demoKabsch.cpp  demoMatching.cpp  demoPruning.cpp  demo_g2o.cpp  demo_grabber.cpp  demo_kabsch.cpp  demo_matching.cpp  demo_pruning.cpp  graph2D2graph3D.cpp  main.cpp  manifest.xml
cmake_modules/: FindCSparse.cmake
configs/MatchingXYZDesc_E_E_freiburg1_desk_inlier2/: PtgreyModel.xml  mapConfig.xml  matcherOpenCVParameters.xml~
configs/MatchingXYZDesc_E_E_freiburg2_desk/: fileModel.xml~  matcherOpenCVParameters.xml
configs/MatchingXYZDesc_E_E_freiburg3_long_household/: fileModel.xml  matcherOpenCVParameters.xml~
configs/MatchingXYZDesc_ICL_office_kt2_noise/: fileModel.xml~
configs/MatchingXYZDesc_ICL_office_kt2_noise_Park/: fileModel.xml  matcherOpenCVParameters.xml
configs/PUTSLAM_Messor2Exp2_outside1/: putslamfileModel.xml  putslammapConfig.xml
configs/PUTSLAM_Messor2Exp2_outside2/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_outside3/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_testWalk2/: putslamfileModel.xml  putslammatcherOpenCVParameters.xml
configs/PUTSLAM_Messor2Exp2_tripodFreeVel0p35/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodFreeVel0p7/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodRampVel0p2/: putslamfileModel.xml  putslammatcherOpenCVParametersLC.xml
configs/PUTSLAM_Messor2Exp2_tripodRampVel0p25/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodRampVel0p25_1/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareRotVel0p1/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareRotVel0p35/: putslamconfigGlobal.xml  putslamuncertaintyModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareRotVel0p7/: putslamKinectModel.xml  putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareRotVel1p0/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareVel0p1/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareVel0p35/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareVel0p7/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodSquareVel1p0/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodXYZvel0p1/: putslamfileModel.xml  putslammapConfig.xml
configs/PUTSLAM_Messor2Exp2_tripodXYZvel0p35/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodXYZvel0p7/: putslamfileModel.xml
configs/PUTSLAM_Messor2Exp2_tripodXYZvel1p0/: putslamfileModel.xml
configs/PUTSLAM_PUTAM_ToII_Asus_1_tracking/: putslamfileModel.xml  putslammatcherOpenCVParameters.xml
configs/PUTSLAM_PUTAM_ToII_Asus_2_matching/: putslamfileModel.xml
configs/PUTSLAM_PUTAM_ToII_Asus_3_matching/: putslamfileModel.xml
configs/PUTSLAM_PUTAM_ToII_Asus_4_matching/: putslamfileModel.xml
configs/TrackingXYZDescPatches_ICL_office_kt2/: matcherOpenCVParameters.xml  matcherOpenCVParameters.xml~
configs/TrackingXYZDesc_E_E_ICL_office_kt2/: matcherOpenCVParameters.xml  matcherOpenCVParameters.xml~
configs/TrackingXYZDesc_E_E_freiburg1_desk_inlier2/: TemplateModel.xml
configs/TrackingXYZDesc_E_E_freiburg2_desk/: XtionModel.xml  mapConfig.xml~  matcherOpenCVParameters.xml~
configs/TrackingXYZDesc_E_E_freiburg3_long_household/: fileModel.xml~  matcherOpenCVParameters.xml
configs/TrackingXYZDesc_E_RAE_ICL_office_kt2/: matcherOpenCVParameters.xml  matcherOpenCVParameters.xml~
configs/TrackingXYZDesc_RAE_RAE_ICL_office_kt2/: matcherOpenCVParameters.xml~
configs/TrackingXYZDesc_RAE_R_ICL_office_kt2/: matcherOpenCVParameters.xml  matcherOpenCVParameters.xml~
configs/TrackingXYZDesc_R_R_ICL_office_kt2/: matcherOpenCVParameters.xml  matcherOpenCVParameters.xml~
configs/TrackingXYZDesc_freiburg1_desk/: fileModel.xml~
configs/octomapTests/: fileModel.xml  fileModel.xml~
demos/: demoG2o.cpp  demoGrabber.cpp  demoKabsch.cpp  demoMap.cpp  demoMatching.cpp  demoPatches.cpp  demoPlayer.cpp  demoPruning.cpp  demoROS.cpp  demoUSAC.cpp  demoVisualizer.cpp  graph2D2graph3D.cpp
include/: PUTSLAM.h
include/Defs/: putslam_defs.h
include/GlobalMap/: elevation_map.h  map.h
include/Grabber/: ROSGrabber.h  depthSensorModel.h  fileGrabber.h  file_grabber.h  grabber.h  kinect_grabber.h  ptgreyGrabber.h  ptgrey_grabber.h  templateGrabber.h  template_grabber.h  xtionGrabber.h  xtion_grabber.h
include/LDB/: ldb.h
include/LoopClosure/: loopClosure.h  loopClosureLocal.h
include/Map/: featuresMap.h  map.h
include/Matcher/: MatchingOnPatches.h  RANSAC.h  RGBD.h  dbscan.h  matcher.h  matcherOpenCV.h  matcherSURF.h
include/MotionModel/: decayingVelocityModel.h  motionModel.h
include/PUTSLAM/: PUTSLAM.h  TimeMeasurement.h
include/PoseGraph/: global_graph.h  graph.h  graph_g2o.h  weightedGraph.h
include/RGBD/: RGBD.h
include/Tracker/: tracker.h  trackerKLT.h
include/TransformEst/: ICPEst.h  RANSAC.h  g2oEst.h  kabschEst.h  transformEst.h  unscented.h
include/USAC/: ConfigParamsPUTSLAM.h  PUTSLAMEstimator.h  USAC.h  USAC_wrapper.h
include/Utilities/: CLParser.h  observer.h  simulator.h  stopwatch.h
include/VisualPlaceRecognition/: fabmap.hpp  (+2 more)
launch/: putslam_kinect.launch  putslam_rosbag.launch
resources/: KinectModel.xml  ROSModel.xml  XtionModel.xml  calculateEllipse.m  calculateEllipseMat.m  cameraModelFreiburg1.xml  cloudA.m  cloudB.m  configGlobal.xml  error_ellipse.m  fileModel.xml  graph.g2o  kabsch.m  localLC.xml  map.m  mapConfig.xml  matcherOpenCVParameters.xml  matcherOpenCVParametersLC.xml  putslamKinectModel.xml  putslamconfigGlobal.xml  putslamfileModel.xml  putslamlocalLC.xml  putslammapConfig.xml  trajectory.res  uncertaintyKabsch.m  uncertaintyKabschQuat.m  visualizerConfig.xml
scripts/: Kin1vsKin2script.py  Kin1vsKin2script.py~  convertICLdepthToDepthImage.py  createFastFusionFile.py  evaluate_ate.py~  evaluate_rpe.py~  generateConfigFiles.py  prepareDatasetFreiburg.py  prepareDatasetICL.py  prepareDatasetICL_office0.py  prepareDatasetICL_office0.py~  prepareDatasetICL_office3.py  runPUTSLAM.py  summarizeResults.py  summarizeResults.py~
src/: PUTSLAM.cpp
(+237 files in other folders)
